<resources>
    <string name="app_name">Gatekidper</string>
    <!--MainActivity-->
    <string name="send_simple_notification">Simple Notification</string>
    <string name="send_multi_choice">Choice Notification</string>
    <string name="send_alert">Alert</string>
    <string name="manage_notifications">Set Notifications</string>
    <string name="open_wearable_app">Wearable App</string>


    <!--Wearable strings-->
    <string name="notification_prompt_reply">Response the notification by...</string>
    <string name="no_assistance">Not assistance register for:</string>
    <string name="notification_reply">Reply</string>

    <!--SettingActivity-->
    <string name="pref_new_message">Create Notification</string>
    <string name="simple_notifications">Simple Notification</string>
    <string name="multiple_choose_notifications">Multiple Choose Notification</string>
    <string name="alert_notifications">Alert Notification</string>

    <!--Create a new message-->
    <string name="pref_default_display_message">Please Insert the message</string>
    <string name="pref_title_display_message">Insert the new message</string>
    <string name="pref_choice_a">Insert the choice (a)</string>
    <string name="pref_choice_b">Insert the choice (b)</string>
    <string name="pref_choice_c">Insert the choice (c)</string>


    <string name="action_new_student">New Student</string>
    <string name="action_see_chart">See Chart</string>
    <string name="action_send_email">Send an E-mail</string>
    <string name="action_message_setting">Notification Settings</string>


    <!--Menu-->
    <string name="action_settings">Setting</string>


</resources>
