<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="demos.android.com.craneo.mydemoapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_student"
        android:orderInCategory="100"
        android:title="@string/action_new_student"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_see_chart"
        android:orderInCategory="100"
        android:title="@string/action_see_chart"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send_email"
        android:orderInCategory="100"
        android:title="@string/action_send_email"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_message_setting"
        android:orderInCategory="100"
        android:title="@string/action_message_setting"
        app:showAsAction="never" />

</menu>