<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_message"
        android:inputType="textShortMessage"
        android:key="wearable_choice_message"
        android:maxLines="2"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_title_display_message"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_message"
        android:inputType="textShortMessage"
        android:key="wearable_option_a"
        android:maxLines="2"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_choice_a"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_message"
        android:inputType="textShortMessage"
        android:key="wearable_option_b"
        android:maxLines="2"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_choice_b"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_message"
        android:inputType="textShortMessage"
        android:key="wearable_option_c"
        android:maxLines="2"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_choice_c"/>



</PreferenceScreen>