<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="demos.android.com.craneo.temporal.SettingActivity$SimpleNotificationFragment"
        android:icon="@drawable/ic_ok_notification_24dp"
        android:title="@string/simple_notifications"/>

    <header
        android:fragment="demos.android.com.craneo.temporal.SettingActivity$QuestionNotificationFragment"
        android:icon="@drawable/ic_multiple_choose_not_24dp"
        android:title="@string/multiple_choose_notifications"/>

    <header
        android:fragment="demos.android.com.craneo.temporal.SettingActivity$AlertNotificationFragment"
        android:icon="@drawable/ic_alert_notification_24dp"
        android:title="@string/alert_notifications"/>
</preference-headers>